devops-proejcts/Full-Stack Application with Kubernetes Orchestration/exp.yml
# express-deployment 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  namespace: mongo-express
  labels:
    app: express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exp
  template:
    metadata:
      labels:
        app: exp
    spec:
      containers:
      - name: exp-container
        image: mongo-express:latest 
        ports:
          - containerPort: 8081
---
# express-NodePort
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongo-express
spec:
  type: NodePort
  selector:
      app: exp
  ports:
    - port: 8081
      targetPort: 8081  
      nodePort: 30081
