devops-proejcts/Full-Stack Application with Kubernetes Orchestration/db.yml
# DB-deployment 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: mongo-db
  labels:
    app: DB
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db-container
          image: mongo:4.4
          ports:
            - containerPort: 27017

          volumeMounts:
            - name: pvc-vol
              mountPath: /data/db

      tolerations:
        - key: "key"
          operator: "Equal"
          value: "db"
          effect: "NoSchedule"

      nodeName: task

      volumes:
        - name: pvc-vol
          persistentVolumeClaim:
            claimName: db-pvc
---

# DB-clusterIP
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongo-db
spec:
  selector:
      app: db
  ports:
    - port: 27017
      targetPort: 27017 

---
# Network-policy

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
  namespace: mongo-db
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: mongo-express
    - podSelector:
        matchLabels:
          app: exp
    ports:
    - protocol: TCP
      port: 27017
